--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,10 @@ h2{
     height: 100%;
     width: 100%;
     border: royalblue solid 3px;
-    z-index: 500;
+    
+}
+.logo-home{
+    font-size: xx-large;
 }
 .container{
     border: brown solid 3px;
